--- a/chapter3.tex
+++ b/chapter3.tex
@@ -23,10 +23,9 @@ Para que se possa trabalhar com a planta também será necessário calibrar todo
 os sensores e atuadores, além de se fazer uma conferência dos circuitos
 elétricos, para certificar que estes ainda funcionam de forma correta. Todo este
 procedimento será feito usando-se a plataforma de controle para a aquisição de
-dados. Para isso será necessário estudar os trabalhos
-de~\textcite{misc:nelson} e~\textcite{misc:valle-silva}. Como
-prova de conceito, também será utilizado um computador portátil de baixo custo
-para o controle da planta.
+dados. Para isso será necessário estudar os trabalhos de~\textcite{misc:nelson}
+e~\textcite{misc:valle-silva}. Como prova de conceito, também será utilizado um
+computador portátil de baixo custo para o controle da planta.
 
 Os modelos levantados por~\textcite{masterthesis:nelson} serão validados no
 sistema físico. Isto é necessário para verificar que não houve alterações
