--- a/conclusion.tex
+++ b/conclusion.tex
@@ -4,3 +4,13 @@
 \chapter{Conclusão}%
 \label{chp:conclusion}
 
+Apesar do contratempo encontrado durante a validação dos modelos e observadores,
+o progresso dos trabalhos pode ser considerado satisfatório. Foi possível testar
+o controlador em outro sistema e perceber suas vantagens, além de experimentar
+duas formulações diferentes de observadores. As modificações feitas na
+plataforma já foram utilizadas por membros do Grupo de Modelagem e Controle de
+Sistemas Mecatrônicos que reportaram benefícios advindos das melhorias.
+
+No segundo semestre será estudada a formulação por funções de Laguerre do
+controlador \ac{MPC} e projetados controladores PID e \ac{MPC} para o forno. A
+implementação de melhorias na plataforma será continuada.
