--- a/document.tex
+++ b/document.tex
@@ -61,10 +61,10 @@
   \cleardoublepage{}
   \input{chapter4}
   \cleardoublepage{}
-  % \input{chapter5}
-  % \cleardoublepage{}
-  % \input{conclusion}
-  % \cleardoublepage{}
+  \input{chapter5}
+  \cleardoublepage{}
+  \input{conclusion}
+  \cleardoublepage{}
 
   \printbibliography{}
 \end{document}
