Correções do Thiago.

--- a/abbr.tex
+++ b/abbr.tex
@@ -2,7 +2,7 @@
 % !TeX encoding = UTF-8 Unicode
 
 % probably a good idea for the nomenclature entries:
-\acsetup{first-style=short}
+\acsetup{first-style=short,list-style=longtable}
 
 \DeclareAcronym{LPV}{
     short = LPV,
